@@ -1,4 +1,4 @@
-# last modified 2020-05-17 by J. Fox
+# last modified 2020-07-13 by J. Fox
 
 # additions for car >= 3.0-0, started 2016-12-27
 
@@ -257,6 +257,7 @@ S3method(Anova, survreg)
 S3method(Anova, svyglm)
 S3method(avPlot, lm)
 S3method(avPlot, glm)
+S3method(avPlots, default)
 S3method(bootCase, lm)
 S3method(bootCase, glm)
 S3method(bootCase, nls)
@@ -269,9 +270,11 @@ S3method(nextBoot, lm)
 S3method(nextBoot, nls)
 S3method(boxTidwell, default)
 S3method(boxTidwell, formula)
+S3method(ceresPlots, default)
 S3method(ceresPlot, glm)
 S3method(ceresPlot, lm)
 S3method(crPlot, lm)
+S3method(crPlots, default)
 S3method(deltaMethod, default)
 S3method(deltaMethod, lm)
 S3method(deltaMethod,multinom)
@@ -325,6 +328,7 @@ S3method(matchCoefs, lme)
 S3method(matchCoefs, mer)
 S3method(matchCoefs, merMod)
 S3method(matchCoefs, mlm)
+S3method(mcPlots, default)
 S3method(mcPlot, lm)
 S3method(mmp, default)
 S3method(mmp, lm)
